// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeComponent /> should match snapshot - sessionId: false 1`] = `
<Fragment>
  <Connect(LoginFormContainer) />
</Fragment>
`;

exports[`<HomeComponent /> should match snapshot - sessionId: true 1`] = `
<Fragment>
  <Connect(DashboardComponent) />
</Fragment>
`;
